[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-cyber-threat-intel"
version = "0.1.0"
description = "AI x Cybersecurity Threat Intelligence Collection & Analysis Platform"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
